--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 :root{
     --header-height:3rem;
     --hue-color:230;
-    --fist-color:hsl(var(--hue-color),69%,61%);
+    --fist-color:hsl(var(--hue-color),69%,49%);
     --fist-color-second:hsl(var(--hue-color),69%,61%);
     --first-color-alt:hsl(var(--hue-color),57%,53%);
     --first-color-lighter:hsl(var(--hue-color),92%,85%);
@@ -205,7 +205,7 @@ img{
 
 .nav__list{
     grid-template-columns:repeat(3,1fr);
-    gagp:2rem;
+    gap:2rem;
 }
 
 .nav__link{
@@ -282,6 +282,7 @@ img{
 }
 
 .home__blob_img{
+    /*width: 190px;*/
     width: 190px;
 }
 
@@ -966,7 +967,7 @@ En esta seccion voy a establecer las medidas que tendra la pagina para los dispo
         margin-left: auto;
         margin-right: auto;
     }
-    
+        
     body{
         margin: 0;
     }
@@ -1108,6 +1109,7 @@ En esta seccion voy a establecer las medidas que tendra la pagina para los dispo
     .footer__container{
         padding: 0;
     }
+    
     
     .home__blob{
         width: 320px;
